# TurboT5

./: .gitignore  README.md  pyproject.toml
src/turbot5/: __init__.py
src/turbot5/heads/: encoder_heads.py  t5_heads.py
src/turbot5/model/: attentions.py  config.py  modeling.py  modules.py  padding.py  utils.py
src/turbot5/ops/: attention_bias.py  flash_attention.py  flash_decoding.py  fused_bias_attention.py  gated_mlp.py  naive_attention.py  rms_norm.py  varlen_fused_bias_attn.py
tests/: test_attentions.py  test_generation.py  test_rms_norm.py
