[tool.poetry]
name = "turboT5"
version = "0.0.1"
description = "Memory and compute efficient T5 models."
authors = ["knowledgator.com"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformers = ">=4.30.0"
torch = ">=2.1.0"
triton = ">=2.2.0"
einops =">=0.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"